main.css
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

.fullheight {
  min-height: 100vh;
  display: flex;
  justify-content: space-between;
  flex-direction: column;
}

.container {
  max-width: 1195px;
  margin: 0 auto;
  padding: 0 10px;
}

.wrapper {
  overflow-y: auto;
}

body {
  text-align: start;
  color: #f6f6f6;
  background-color: #191919;
}

body,
html {
  font-family: 'Inter', sans-serif;
  font-size: 14px;
}

ul {
  list-style-type: none;
  margin: 0;
  padding: 0;
  overflow: hidden;
  background-color: #191919;
  display: flex;
}

li a {
  display: block;
  color: #f6f6f6;
  text-align: start;
  font-size: 14px;
  padding: 20px;
  text-decoration: none;
  transition: border 250ms ease-out;
  border-bottom: 2px solid rgba(255, 255, 255, 0);
}

li a:hover {
  border-bottom: 2px solid rgba(255, 255, 255, 1.0);

}

.header {
  border-bottom: 1px solid rgba(44, 44, 44, 0.70);
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: center;
}

.socials {
  display: flex;
  flex-direction: row;
  gap: 25px;
}

.socials svg path {
  fill: rgb(120, 120, 120);
}

.socials svg path:hover {
  fill: rgb(151, 151, 151);
}

.hero {
  height: 300px;
  display: flex;
  flex-direction: column;
  justify-content: center;
  font-family: 'Space Grotesk', sans-serif;
  border-bottom: 1px solid rgba(44, 44, 44, 0.70);
}

h1 {
  font-size: 58.92px;
  font-weight: bold;
}

h4 {
  font-size: 23.324px;
  font-weight: 400;
}

h5 {
  font-size: 18.662px;
  font-weight: 400;
}

.highlight {
  color: #3083DC;
}

.about-me {
  padding: 20px 0;
  border-bottom: 1px solid rgba(44, 44, 44, 0.70);
}

.about-me a {
  color: #3083DC;
  font-weight: 500;
  text-decoration: none;

}

.ab-content {
  margin: 16px 0;
}

.ab-content p {
  margin-bottom: 20px;
  font-size: 16px;
  line-height: 1.5;
}

.email {
  color: #3083DC;
}

.skills {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  height: 97px;
  border-bottom: 1px solid rgba(44, 44, 44, 0.7);
  padding: 30px 0;
  gap: 10px;
  overflow-x: auto;
}


.skills p {
  font-size: 30px;
  height: 36px;
  font-family: 'Inter', sans-serif;
  color: #3f3f3f;
  font-weight: bold;
}

.topic h5 {
  font-family: 'Inter', sans-serif;
  font-size: 18.622px;
  font-weight: 500;
  margin: 20px 0;
}

.topic p {
  font-size: 16px;
  height: 20px;
  margin: 16px 0;
}

.my-links {
  display: flex;
  flex-direction: row;
  height: 100px;
  padding: 20px 0;
  justify-content: space-between;
  gap: 5px;
}

.btn-link button {
  cursor: pointer;
  border: 1px solid #3083DC;
  border-radius: 33px;
  height: 40px;
  width: 100%;
  background-color: #3083DC;
  color: #f6f6f6;
  font-size: 16px;
}

.btn-link {
  width: 100%;
}

footer {
  background-color: #212121;
  padding: 12px 0;
  height: 46px;
  margin-top: 40px;
}

.footer {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: center;
}

.name {
  color: #f6f6f6;
  font-size: 16px;
  font-weight: 500;
}

.copyright {
  font-size: 15px;
  color: rgb(167, 167, 167);
}

/* Might need later */
@media screen and (max-width:1195px) {
  .my-links {
    flex-direction: column;
    align-items: center;
  }

  .btn-link {
    width: 80%;
  }
}

